recursion.lessons.recursion.koch.Koch.scala.error
Koch:2: error: ':' expected but ',' found.
def snowFlake(levels, length){
                    ^Koch:35: error: identifier expected but '}' found.
}
^